# ImGuiWidgets

./: .gitignore  .meson-subproject-wrap-hash.txt  meson.build
include/: imguiwidgets.hpp
include/imwidgets/: FpsPlot.h  GuiLogger.h  imwidgets.h
src/: FpsPlot.cpp  GuiLogger.cpp
subprojects/: imguiwrapper.wrap  ren_utils.wrap
